--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,6 @@
 <!--Αυτός ο κώδικας HTML δημιουργεί μια ιστοσελίδα για ένα καφέ-πολυχώρο που ονομάζεται Swissblade-->
 
-<!--Δ΄ήλωση του τύπου του εγγράφου HTML-->
+<!--Δ΄ήλωση του τύπου του HTML-->
 <!DOCTYPE html>
 <html>
 
